# setk

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .style.yapf  CMakeLists.txt  LICENSE  README.md  TODO  path.sh  prepare_data.sh  requirements.txt  train_dnn.sh
conf/: fbank_librosa.conf  librosa_stft.conf  mask.conf  srp.conf  stft.conf
doc/: README.md
doc/adaptive_beamformer/: README.md
doc/data_simu/: README.md  wav_simulate.py
doc/fixed_beamformer/: README.md
doc/format_transform/: README.md
doc/format_transform/asset/: egs.ark
doc/ns/: README.md
doc/rir/: README.md
doc/rir/asset/: 1d_rir.json  2d_rir.json
doc/spatial_clustering/: README.md
doc/spatial_feature/: README.md
doc/spectral_feature/: README.md
doc/ssl/: README.md
doc/steer_vector/: README.md
doc/steer_vector/asset/: beam_v1.npy
doc/tf_mask/: README.md
doc/vad/: README.md
doc/wpe/: README.md
egs/upit/: README.md
egs/upit/conf/: 16k.stft.conf
egs/upit/local/: compute_ipd.sh  eval.sh  prepare_2spk.sh  prepare_3spk.sh  train.sh
egs/upit/nnet/: compute_mask.py  conf.py  dataset.py  loader.py  nnet.py  train.py  trainer.py
egs/upit/nnet/libs/: dataset.py  trainer.py  utils.py
include/: CMakeLists.txt  beamformer.cc  beamformer.h  cblas-cpl-wrappers.h  complex-base.h  complex-matrix.cc  complex-matrix.h  complex-vector.cc  complex-vector.h  nnmf.cc  nnmf.h  rir-generator.cc  rir-generator.h  snmf.cc  snmf.h  srp-phat.cc  srp-phat.h  stft.cc  stft.h
local/: README.md  compute_masks.sh  compute_nnet3_mask.sh  compute_stft_stats.sh  iobase.py  prepare_feats.sh  prepare_mask.sh  prepare_sp.sh  report.sh  run_beamformer.sh  score.sh  train_cm.sh  train_mask.sh  train_sp.sh
scripts/: apply_fix_beamformer.py  compute_circular_srp.sh  compute_df_on_mask.sh  compute_directional_feats.sh  compute_ipd_and_linear_srp.sh  compute_librosa_fbank.sh  compute_librosa_spectrogram.sh  compute_linear_spatial_feats.sh  compute_masks.sh  compute_oracle_mask.sh  compute_spatial_feats.sh  compute_srp_circular.sh  compute_stft_stats.sh  copy_cmat.py  cut_silence.sh  get_wav_duration.sh  mono_mask_enhance.sh  run_adapt_beamformer.sh  run_auxiva.sh  run_beamformer.sh  run_cacgmm.sh  run_cgmm.sh  run_ds_beamformer.sh  run_fixed_beamformer.sh  run_gwpe.sh  run_mono_enhan.sh  run_sd_beamformer.sh  run_ssl.sh  run_tf_masking.sh  run_vad.sh  run_wpe.sh  train_dnn_mask.sh  train_rnn_mask.sh  visualize_angular_spectrum.py  visualize_matrix.py  visualize_tf_matrix.py
scripts/sptk/: README.md  apply_adaptive_beamformer.py  apply_auxiva.py  apply_classic_beamformer.py  apply_ds_beamformer.py  apply_fix_beamformer.py  apply_fixed_beamformer.py  apply_gwpe.py  apply_ns.py  apply_omlsa.py  apply_sd_beamformer.py  apply_wpd.py  apply_wpe.py  beamformer.py  bss_eval_sources.py  compute_centroid.py  compute_circular_srp.py  compute_df_on_geometry.py  compute_df_on_mask.py  compute_directional_feats.py  compute_dpcl_label.py  compute_fbank.py  compute_ipd_and_linear_srp.py  compute_linear_df_on_mask.py  compute_linear_spatial_feats.py  compute_mask.py  compute_sdr.py  compute_si_snr.py  compute_similar_score.py  compute_spatial_feats.py  compute_spectrogram.py  compute_srp_circular.py  compute_steer_vector.py  compute_wer.py  copy_archive_to_mat.py  copy_complex_mat.py  copy_mat_to_archieve.py  copy_mat_to_archive.py  cut_silence.py  data_handler.py  (+32 more)
scripts/sptk/libs/: __init__.py  beamformer.py  cgmm_trainer.py  cluster.py  data_handler.py  exraw.py  gwpe.py  iobase.py  kaldi_io.py  metric.py  ns.py  opts.py  sampler.py  scheduler.py  simulator.py  spatial.py  ssl.py  utils.py  wpe.py
src/: CMakeLists.txt  apply-cmvn-perutt.cc  apply-fixed-beamformer.cc  apply-supervised-max-snr.cc  apply-supervised-mvdr.cc  compute-masks.cc  compute-srp-phat.cc  compute-stft-stats.cc  matrix-scale-elements.cc  matrix-scale-rows.cc  modify-feats.cc  perform-snmf.cc  rir-simulate.cc  test-complex.cc  test-stft.cc  wav-estimate.cc  wav-separate.cc  wav-seperate.cc  wav-to-power.cc
steps/: archive_wav.sh  compute_masks.sh  compute_stft_stats.sh  extract_segments.sh  mono_mask_enhance.sh  train_dnn_mask.sh  train_rnn_mask.sh
test/: CMakeLists.txt  test-beamformer.cc  test-complex.cc  test-nnmf.cc  test-snmf.cc  test-srp-phat.cc  test-stft.cc  test_rir_generator.sh
